llmx-rs/tui/src/status/snapshots/llmx_tui__status__tests__status_snapshot_includes_monthly_limit.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────────────╮
│  >_ LLMX (v0.1.3)                                                         │
│                                                                           │
│ Visit https://chatgpt.com/llmx/settings/usage for up-to-date              │
│ information on rate limits and credits                                    │
│                                                                           │
│  Model:           gpt-5-llmx                                              │
│  Directory: [[workspace]]                                                 │
│  Approval:        on-request                                              │
│  Sandbox:         read-only                                               │
│  Agents.md:       <none>                                                  │
│                                                                           │
│  Token usage:     1.2K total  (800 input + 400 output)                    │
│  Monthly limit:   [██████████████████░░] 88% left (resets 07:08 on 7 May) │
╰───────────────────────────────────────────────────────────────────────────╯
