llmx-rs/tui/src/status/snapshots/llmx_tui__status__tests__status_snapshot_shows_stale_limits_message.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────╮
│  >_ LLMX (v0.1.1)                                                 │
│                                                                   │
│ Visit https://chatgpt.com/llmx/settings/usage for up-to-date      │
│ information on rate limits and credits                            │
│                                                                   │
│  Model:          gpt-5-llmx                                       │
│  Directory: [[workspace]]                                         │
│  Approval:       on-request                                       │
│  Sandbox:        read-only                                        │
│  Agents.md:      <none>                                           │
│                                                                   │
│  Token usage:    1.9K total  (1K input + 900 output)              │
│  5h limit:       [██████░░░░░░░░░░░░░░] 28% left (resets 03:14)   │
│  Weekly limit:   [████████████░░░░░░░░] 60% left (resets 03:34)   │
│  Warning:        limits may be stale - start new turn to refresh. │
╰───────────────────────────────────────────────────────────────────╯
