llmx-rs/tui/src/status/snapshots/llmx_tui__status__tests__status_snapshot_truncates_in_narrow_terminal.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────╮
│  >_ LLMX (v0.1.1)                          │
│                                            │
│ Visit https://chatgpt.com/llmx/settings/   │
│ usage for up-to-date                       │
│ information on rate limits and credits     │
│                                            │
│  Model:         gpt-5-llmx                 │
│  Directory: [[workspace]]                  │
│  Approval:      on-request                 │
│  Sandbox:       read-only                  │
│  Agents.md:     <none>                     │
│                                            │
│  Token usage:   1.9K total  (1K input + 90 │
│  5h limit:      [██████░░░░░░░░░░░░░░] 28% │
│                 (resets 03:14)             │
╰────────────────────────────────────────────╯
